[gd_scene load_steps=7 format=2]

[ext_resource path="res://etc/I-pixel-u.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/game_over.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 1 )

[node name="esc_screen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 334.0
margin_top = 152.0
margin_right = 729.0
margin_bottom = 487.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 395.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 395.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 2 )
text = "SCORE: 100"
align = 1

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 395.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 3 )
text = "HIGH: 100"
align = 1

[node name="respawnButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 193.0
margin_right = 395.0
margin_bottom = 262.0
custom_fonts/font = SubResource( 4 )
text = "TRY AGAIN"
flat = true

[node name="respawnButton2" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 266.0
margin_right = 395.0
margin_bottom = 335.0
custom_fonts/font = SubResource( 4 )
text = "GO TO PUB"
flat = true
[connection signal="pressed" from="CenterContainer/VBoxContainer/respawnButton" to="." method="_on_respawnButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/respawnButton2" to="." method="_on_respawnButton2_pressed"]
